--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -6,5 +6,27 @@
             <a href="/posts/save" role="button" class="btn btn-primary">글쓰기</a>
         </div>
     </div>
+    <br>
+    <!--목록출력-->
+    <table class="table table-horizontal table-bordered">
+        <thead class="thead-strong">
+            <tr>
+                <th>글번호</th>
+                <th>제목</th>
+                <th>글쓴이</th>
+                <th>수정날짜</th>
+            </tr>
+        </thead>
+        <tbody id="tbody">
+            {{#posts}} <!--indexController에서 posts라는 이름으로 받아옴-->
+                <tr>
+                    <td>{{id}}</td>
+                    <td><a href="/posts/update/{{id}}">{{title}}</a></td>
+                    <td>{{writer}}</td>
+                    <td>{{modifiedDate}}</td>
+                </tr>
+            {{/posts}}
+        </tbody>
+    </table>
 </div>
 {{>layout/footer}}
